<resources>
    <string name="app_name">First App</string>
    <string name="playlist">Playlist</string>
    <string name="emotional_well_being_healing_practices_for_children">Emotional Well-being Healing Practices for Children</string>
    <string name="in_this_sin_this_series_we_break_down_the_impact_of_displacement_instability_violence_and_trauma_in_children_and_offer_exercises_to_support_children_in_their_healing_journey">in_this_sIn this series, we break down the impact of displacement, instability, violence, and trauma in children, and offer exercises to support children in their healing journey.</string>
    <string name="_32_video_series">32 video series</string>
    <string name="video_series">video_series</string>
    <string name="back">Back</string>

    <string name="video_time">video time</string>
    <string name="todo">TODO</string>

    <string name="playlist1">playlist</string>

    <string name="normal">Плохие слова</string>
    <string name="download">Download</string>
</resources>