<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <RelativeLayout
        android:id="@+id/relmy"
        android:layout_width="wrap_content"

        android:layout_height="50dp"
        android:background="@drawable/abc_vector_test"
        android:elevation="22dp"


        >

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="10sp"
            android:background="@drawable/ic_back"


            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10sp"
            android:gravity="top"
            android:lineSpacingExtra="2sp"
            android:text="@string/back"
            android:textAppearance="@style/label"
            android:textColor="@color/red"
            android:textSize="13sp"
            android:translationY="-0.86sp" />

        <TextView
            android:id="@+id/playlistDetail"
            android:layout_width="62dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="149dp"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="0sp"
            android:text="@string/playlist"
            android:textAppearance="@style/playlist"
            android:textColor="@color/red"
            android:textSize="15sp"

            />

    </RelativeLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"


        >


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            >

            <androidx.appcompat.widget.Toolbar

                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/newColor"
                app:layout_scrollFlags="scroll|enterAlways"


                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/newColor"
                    android:orientation="vertical"

                    >


                    <TextView
                        android:id="@+id/descriptionFromOneActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/emotional_well_being_healing_practices_for_children"
                        android:textAppearance="@style/in_this_ser"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/titleFromOneActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/in_this_sin_this_series_we_break_down_the_impact_of_displacement_instability_violence_and_trauma_in_children_and_offer_exercises_to_support_children_in_their_healing_journey"
                        android:textAppearance="@style/emotional_w"
                        android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="290dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_play_button" />


                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>


            <androidx.appcompat.widget.Toolbar

                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    >

                    <TextView
                        android:id="@+id/video_seriesCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:text="32 video series"
                        android:textAppearance="@style/video_serie"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"


                        />


                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_viewDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="16sp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>